# voorvoet_eboekhouden_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-tag.yml  docker-publish.yml
tests/: mock_client.py  test_facturen.py  test_pages.py  test_relaties.py  test_zettle.py
voorvoet_app/: Voorvoet_App.py  __init__.py  footer.py
voorvoet_app/.github/workflows/: docker-build.yml
voorvoet_app/pages/: 1_1._Relaties_importeren.py  2_2._Facturen_importeren.py  3_3._Zettle_importeren.py  9_A._Software_versies.py
voorvoet_app/pages/facturen/: __init__.py  facturen_overview.py  process_facturen.py  select_new_facturen.py
voorvoet_app/pages/relaties/: __init__.py  generate_relatie_objects.py  process_relaties.py  select_new_relaties.py
voorvoet_app/pages/zettle/: __init__.py  zettle_dataframe_to_mutatie.py  zettle_import_from_excel.py  zettle_mutatie_overview.py  zettle_select_new_mutaties.py  zettle_select_new_transactions.py
