[tool.poetry]
name = "voorvoet-app"
version = "0.2.4"
description = "Frontend app to import data from Voorvoet.nl to E-boekhouden.nl."
authors = ["Dennis Bakhuis <git@bakhuis.nu>"]
readme = "README.md"
packages = [{ include = "voorvoet_app" }]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
eboekhouden-python = "^0.2.0"
streamlit = "^1.32.2"
tomli = "^2.0.1"
htbuilder = "^0.6.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "./voorvoet_app"]
