[project]
name = "voorvoet-app"
version = "0.3.1"
description = "Frontend app to import data from Voorvoet.nl to E-boekhouden.nl."
authors = [{ name = "Dennis Bakhuis", email = "git@bakhuis.nu" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "eboekhouden-python>=0.3.0",
    "streamlit>=1.41.1",
    "tomli>=2.2.1",
    "htbuilder>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [".", "./voorvoet_app"]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]
